--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@cestislife"/>
     <meta name="twitter:title" content="cestislife's ACNH Guides"/>
-    <meta name="twitter:image" content="/card.png"/>
+    <meta name="twitter:image" content="https://cestislife.github.io/card.png"/>
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
