--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,5 +72,7 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    
+<script src="/scripts/mode-switcher.js"></script>
   </body>
 </html>
