--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 </script>
 
 {% seo %}
-    <link rel='stylesheet' type='text/css' href='/css/main.css'>
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
