--- a/css/main.scss
+++ b/css/main.scss
@@ -30,9 +30,9 @@ html[data-theme="dark"] {
 
 
 body {
-  background-color: var(--main-background-color);
+  background-color: (--main-background-color);
   padding:50px;
-  font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: var(--main-text-color);
   font-weight:400;
 }
@@ -52,17 +52,14 @@ h1, h2, h3 {
 
 h1 {
   font-size:28px;
-  font-weight: 500;
 }
 
 h2 {
   color: var(--main-text-color);
-  font-weight: 500;
 }
 
 h3, h4, h5, h6 {
   color: var(--main-text-color);
-  font-weight: 500;
 }
 
 a {
@@ -70,8 +67,9 @@ a {
   text-decoration:none;
 }
 
-a:hover {
+a:hover, a:focus {
   color: var(--link-color);
+  font-weight: bold;
 }
 
 a small {
@@ -122,12 +120,12 @@ th, td {
 }
 
 dt {
-  color:#444;
-  font-weight:500;
+  color: var(--main-text-color);
+  font-weight:700;
 }
 
 th {
-  color:#444;
+  color: var(--main-text-color);
 }
 
 img {
@@ -141,7 +139,7 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-header ul {
+ul.downloads {
   list-style:none;
   height:40px;
   padding:0;
@@ -151,53 +149,54 @@ header ul {
   width:270px;
 }
 
-header li {
+.downloads li {
   width:89px;
   float:left;
   border-right:1px solid #e0e0e0;
   height:40px;
 }
 
-header li:first-child a {
+.downloads li:first-child a {
   border-radius:5px 0 0 5px;
 }
 
-header li:last-child a {
+.downloads li:last-child a {
   border-radius:0 5px 5px 0;
 }
 
-header ul a {
+.downloads a {
   line-height:1;
   font-size:11px;
-  color: var(--main-text-color);
+  color: var(--link-color);
   display:block;
   text-align:center;
   padding-top:6px;
   height:34px;
 }
 
-header ul a:hover {
-  color: var(--main-text-color);
+.downloads a:hover, .downloads a:focus {
+  color: var(--link-color);
+  font-weight:bold;
 }
 
-header ul a:active {
-  background-color:#f0f0f0;
+.downloads ul a:active {
+  background-color: var(--link-color);
 }
 
 strong {
   color: var(--main-text-color);
-  font-weight:500;
+  font-weight:700;
 }
 
-header ul li + li + li {
+.downloads li + li + li {
   border-right:none;
   width:89px;
 }
 
-header ul a strong {
+.downloads a strong {
   font-size:14px;
   display:block;
-  color: var(--main-text-color);
+  color: var(--link-color);
 }
 
 section {
@@ -283,11 +282,11 @@ footer {
     padding:15px;
   }
 
-  header ul {
+  .downloads {
     width:99%;
   }
 
-  header li, header ul li + li + li {
+  .downloads li, .downloads li + li + li {
     width:33%;
   }
 }
@@ -296,6 +295,6 @@ footer {
   body {
     padding:0.4in;
     font-size:12pt;
-    color:#444;
+    color: var(--main-text-color);
   }
 }
