--- a/css/main.scss
+++ b/css/main.scss
@@ -3,13 +3,13 @@
 
 html, html[data-theme="light"] {
 	--link-color: rgb(0, 112, 201);
-  --main-background-color: hsl(0, 0%, 90%);
+  --main-background-color: hsl(360, 100%, 100%, 1);
   --main-text-color: hsl(0, 0%, 20%);
 }
 
 html[data-theme="dark"] {
   --link-color: rgb( 100, 210, 255);
-  --main-background-color: hsl(0, 0%, 20%);
+  --main-background-color: hsl(0, 0%, 0%, 1);
   --main-text-color: hsl(0, 0%, 85%); 
 }
 
@@ -17,13 +17,13 @@ html[data-theme="dark"] {
 @media (prefers-color-scheme: dark) {
     html, html[data-theme="dark"] {
       --link-color: rgb( 100, 210, 255);
-    	--main-background-color: hsl(0, 0%, 20%);
+    	--main-background-color: hsl(0, 0%, 0%, 1);
     	--main-text-color: hsl(0, 0%, 85%); 
     }
 
     html[data-theme="light"] {
 		  --link-color: rgb(0, 112, 201);
-    	--main-background-color: hsl(0, 0%, 90%);
+    	--main-background-color: hsl(360, 100%, 100%, 1);
   	 --main-text-color: hsl(0, 0%, 20%);
   } 
 }
