--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ html, html[data-theme="light"] {
 
 html[data-theme="dark"] {
   --link-color: rgb( 100, 210, 255);
-  --main-background-color: hsl(0, 0%, 0%, 1);
+  --main-background-color: hsl(0, 0%, 20%);
   --main-text-color: hsl(0, 0%, 85%); 
 }
 
@@ -17,7 +17,7 @@ html[data-theme="dark"] {
 @media (prefers-color-scheme: dark) {
     html, html[data-theme="dark"] {
       --link-color: rgb( 100, 210, 255);
-    	--main-background-color: hsl(0, 0%, 0%, 1);
+    	--main-background-color: hsl(0, 0%, 20%);
     	--main-text-color: hsl(0, 0%, 85%); 
     }
 
