--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,5 +76,6 @@
     {% endif %}
     
 <script src="/scripts/mode-switcher.js"></script>
+<script src="/scripts/index.js"></script>
   </body>
 </html>
