--- a/css/main.scss
+++ b/css/main.scss
@@ -299,41 +299,39 @@ footer {
   }
 }
 
-/* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #eee;
-  color: #444;
+  background-color: #daeeed;
+  color: #554a41;
+  font-size: 16px;
   cursor: pointer;
   padding: 10px;
   width: 100%;
-  text-align: left;
   border: none;
+  text-align: left;
   outline: none;
   transition: 0.4s;
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-  background-color: #ccc;
+.active,
+.accordion:hover {
+  background-color: #b2dbd9;
 }
 
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-  padding: 0 18px;
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-	
 .accordion:after {
-  content: '\02795'; /* Unicode character for "plus" sign (+) */
-  font-size: 13px;
+  content: "\002B";
   color: #777;
+  font-weight: bold;
   float: right;
   margin-left: 5px;
 }
 
 .active:after {
-  content: "\2796"; /* Unicode character for "minus" sign (-) */
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
 }
