--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="twitter:title" content="{{ page.title }} | cestislife's guides"/>
+    <script src="https://cestislife.github.io/serviceloader.js" type="module"></script>
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175881587-1"></script>
