twitter card image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:title" content="{{ page.title }} | cestislife's guides"/>
+    <meta name="twitter:image" content="https://cestislife.github.io/card.png"/>
     <script src="https://cestislife.github.io/serviceloader.js" type="module"></script>
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
