--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
+        <p>For inquiries and discussion about the game, join the <a href="https://discord.gg/g2E3rhfZEA">ACNH Info Discord Server!</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         <p><small>Support me on <a href="https://ko-fi.com/cestislife">Ko-Fi!</a></small></p>
       </footer>
